added the ability to view photos from the phone - simple gallery

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,5 @@
     <string name="fragment_dialog_content_file_title">Enter the title of</string>
     <string name="fragment_dialog_content_file_positive_button">Create</string>
     <string name="fragment_dialog_content_file_negative_button">Cancel</string>
+    <string name="shared_fragment_permission_denied">The app needs media permission to work</string>
 </resources>
